fix : [x] line too small [x] same animation speed [x] unable to see ? in Chrome

--- a/src/styles/components/button/index.module.scss
+++ b/src/styles/components/button/index.module.scss
@@ -5,7 +5,7 @@
   color: $primary_text_color;
   border: 1px solid $primary_text_color;
   border-radius: 2rem;
-  transition: ease-in-out 200ms;
+  transition: ease-in-out $btn_animation;
 
   &:hover {
     color: $primary_color;
