--- a/src/styles/components/button/langingbtn.module.scss
+++ b/src/styles/components/button/langingbtn.module.scss
@@ -9,7 +9,7 @@
   display: flex;
 
   &:before {
-    transition: ease-in-out 500ms;
+    transition: ease $line_animation;
     content: "";
     width: 0;
     height: 1px;
